<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    android:clipToPadding="false"
    android:background="#f2f2f2"
    tools:context=".source.activities.RegisterActivity"
    android:gravity="center_vertical|center_horizontal">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.6"
        android:gravity="center_vertical|center_horizontal">
        <ImageView
            android:layout_width="125dp"
            android:layout_height="125dp"
            android:src="@drawable/invoice" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.7"
        android:orientation="vertical"
        android:gravity="center_vertical">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/input_selector"
            android:hint="@string/yourName"
            android:paddingLeft="10dp"
            android:singleLine="true"
            android:inputType="textPersonName"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:textColorHint="#808080"
            android:textColor="#000000"
            android:textIsSelectable="false"
            android:id="@+id/register_02_name" />
        <RelativeLayout
            android:layout_marginRight="40dp"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="40dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/input_selector"
                android:hint="@string/passWordInput"
                android:id="@+id/et_password_re"
                android:singleLine="true"
                android:paddingStart="10dp"
                android:paddingLeft="10dp"
                android:textColorHint="#808080"
                android:layout_marginTop="15dp"
                android:textColor="#000000" />

        </RelativeLayout>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/input_selector"
            android:layout_marginTop="15dp"
            android:hint="@string/confirmPassword"
            android:paddingLeft="10dp"
            android:password="true"
            android:singleLine="true"
            android:layout_marginRight="40dp"
            android:layout_marginLeft="40dp"
            android:textColorHint="#808080"
            android:textColor="#000000"
            android:id="@+id/register_02_pass_again" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.2">
        <Button
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:textColor="#ffffff"
            android:background="@drawable/register_button_bg"
            android:text="@string/enterApp"
            android:id="@+id/btn_enter"
            android:textSize="16sp" />
    </LinearLayout>


</LinearLayout>
